tests/pass/AClass.java
/*package pass;

import java.lang.System;

public class AClass extends AnInterface{


}*/